# distributed-computing

./: .gitignore  .gitlab-ci.yml  README.md  base.docker  requirements.txt  testenv.docker
1.FirstSteps/HelloWorld/: hello_world.py
1.FirstSteps/SimpleSum/: sum_a_b.py
2.CausalBacktracking/CausalBacktracking/: README.md  causal_backtracking.py  test_public.py
2.Factorial/Factorial/: README.md  factorial.py
3.AtomicRegister/AtomicRegister/: README.md  solution.py  test_public.py
3.AtomicRegister/AtomicRegister/tests/: Cargo.toml
3.AtomicRegister/AtomicRegister/tests/src/: common.rs  main.rs  tests.rs
4.Paxos/Paxos/: README.md  anysystem.py  solution.py  test_public.py
4.Paxos/Paxos/tests/: Cargo.toml
4.Paxos/Paxos/tests/src/: main.rs  solution.rs
5.LSM/LSM/: README.md
tools/plugins/: run_pytest.py
tools/testlib/: setup.py
