[package]
name = "paxos"
version = "0.0.0"
edition = "2021"

[dependencies]
anysystem = { git = "https://github.com/systems-group/anysystem.git", rev = "36baac03dc812c0d92c6e8bc56b1ad25f35d70e2" }
clap = { version = "4", features = ["cargo", "derive"] }
assertables = "3.2.2"
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.210", features = ["derive", "std"] }
serde_json = { version = "1.0.132", features = ["std"] }
